# SimpleAutomation

./: .gitignore  README.md  init.py  licence  player.py  pyproject.toml  recorder.py  requirements.txt  save_stop_key.py  setup.py  strct.py  vars.py
sessions/: mail.pkl
src/: __init__.py  advanced.py  clean.py  log.py  player.py  recorder.py  save_stop_key.py  strct.py  vars.py
src/simpleautomation/: __init__.py  advanced.py  cfg.py  clean.py  log.py  player.py  recorder.py  save_stop_key.py  strct.py  tools.py  ui.py  vars.py
test/: cfg_session.py  delete_sessions.py  main.py  play_actions.py  record_actions.py  test_vars.py
